<resources>
    <integer name="tw">20</integer>
    <string name="app_name">Coaching Dhundho</string>

    <string name="facebook_app_id">382863815977332</string>
    <string name="fb_login_protocol_scheme">fb382863815977332</string>

    <string name="s1">Enter your number here</string>
    <string name="s2">Developed and Designed by</string>
    <string name="t1">Please Wait.</string>
    <string name="t2">We will auto verify the OTP sent to</string>
    <string name="t3">+9182101xxxxx</string>
    <string name="t4">auto verify your otp in</string>
    <string name="t5">(03:49)</string>
    <string name="title_activity_home0">Home0</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>


    <string name="search">Search</string>

    //first fragement strings
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Trending_Courses">Trending Courses</string>
    <string name="search_">Search Coaching Institutes courses</string>
    <string name="Nearby_Institutes">Nearby Institutes</string>
    <string name="Popular">Popular</string>
    <string name="qq">qq</string>

    //search fragment
    <string name="qqq">qqq</string>
    <string name="search_result">Search Result</string>
    //filter page
    <string name="filters">   Filters:</string>
    <string name="filter">   Filters</string>
    <string name="sortby">   sortby</string>
    <string name="popular">   popular</string>
    <string name="price_range">  Price Range</string>
    <string name="star_rating">   Star Rating</string>
    <string name="Twenty">   20 Results</string>

    //filter spinner
    <string name="spinner">Spinner</string>
    <string name="fill_the_form">Fill the form :</string>
    <string name="enter_name">Enter name</string>
    <string name="submit">Submit</string>
    <string name="enter_phone_number">Enter Phone Number</string>

    <string-array name="spinner_array">

        <item>Popular</item>

        <item>Alphabetical</item>

        <item>Latest</item>

        <item>Reviews</item>
        <item>Recent</item>
    </string-array>
</resources>
