<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_black"
        android:title="@string/search" />

    <item
        android:id="@+id/category"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/category" />
    <item
        android:id="@+id/notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_perm_identity_black"
        android:title="@string/profile"/>

</menu>
