<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".filterActivity">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/bpg_glaho_arial_v5_big"
        android:text="@string/filter"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="43dp"
        android:layout_height="24dp"
        android:id="@+id/clear_id"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/your_color"
        android:text="clear"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="341dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:text="@string/sortby"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:fontFamily="@font/bpg_glaho_arial_v5_big"/>
        <Spinner

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="170dp"
            android:layout_marginTop="6dp"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:entries="@array/spinner_array"
            android:id="@+id/spinner_id"/>




    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="334dp"
        android:layout_height="97dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/bpg_glaho_arial_v5_big"
            android:text="@string/price_range"
            android:textAllCaps="false"
            android:textColor="@color/blue" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:pointerIcon="cell"
            android:thumb="@android:drawable/btn_radio" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="361dp"
                android:layout_height="228dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/bpg_glaho_arial_v5_big"
                    android:text="@string/star_rating"
                    android:textAllCaps="false"
                    android:textColor="@color/blue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.032"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="332dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"

                    app:layout_constraintEnd_toEndOf="@+id/textView9"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/textView9"
                    app:layout_goneMarginTop="3dp">

                    <ImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:src="@drawable/star_rating_copy_3" />

                    <ImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:src="@drawable/star_rating_copy_3" />

                    <ImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:src="@drawable/star_rating_copy_3" />

                    <ImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:src="@drawable/star_rating_copy_3" />

                    <ImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:src="@drawable/star_rating_copy_3" />
                    <CheckBox
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="183dp"
                        android:buttonTint="@color/blue"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="332dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="44dp"

                    app:layout_constraintEnd_toEndOf="@+id/textView9"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/textView9"
                    app:layout_goneMarginTop="3dp">

                    <ImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:src="@drawable/star_rating_copy_3" />

                    <ImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:src="@drawable/star_rating_copy_3" />

                    <ImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:src="@drawable/star_rating_copy_3" />

                    <ImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:src="@drawable/star_rating_copy_3" />


                    <CheckBox
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="206dp"
                        android:backgroundTint="@color/blue"
                        android:buttonTint="@color/blue"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="332dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="80dp"
                    app:layout_constraintEnd_toEndOf="@+id/textView9"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/textView9"
                    app:layout_goneMarginTop="3dp">

                    <ImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:src="@drawable/star_rating_copy_3" />

                    <ImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:src="@drawable/star_rating_copy_3" />

                    <ImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:src="@drawable/star_rating_copy_3" />


                    <CheckBox
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="229dp"
                        android:backgroundTint="@color/blue"
                        android:buttonTint="@color/blue"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="332dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="116dp"
                    app:layout_constraintEnd_toEndOf="@+id/textView9"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/textView9"
                    app:layout_goneMarginTop="3dp">

                    <ImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:src="@drawable/star_rating_copy_3" />

                    <ImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:src="@drawable/star_rating_copy_3" />


                    <CheckBox
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="252dp"
                        android:backgroundTint="@color/blue"
                        android:buttonTint="@color/blue"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="332dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="156dp"
                    app:layout_constraintEnd_toEndOf="@+id/textView9"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/textView9"
                    app:layout_goneMarginTop="3dp">

                    <ImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:src="@drawable/star_rating_copy_3" />

                    <CheckBox
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="275dp"
                        android:backgroundTint="@color/blue"
                        android:buttonTint="@color/blue"/>
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="337dp"
                android:layout_height="212dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:background="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="59dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/your_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bpg_glaho_arial_v5_big"
            android:text="@string/Twenty"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            />
        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/apply"
            android:layout_marginTop="10dp"
            android:layout_marginStart="100dp"
        />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>